# WorldBank-RAG

./: .env.example  .gitignore  README.md  TESTING.md  pyproject.toml  requirements.txt  start.py  streamlit_app.py
app/: main.py
app/agents/: copilot.py
app/cache/: cache_manager.py
app/pipeline/: ingest.py
app/tools/: wb_api.py
app/utils/: config.py  token_budget.py
frontend/: index.html
tests/: test_wb_api.py
